import { create } from 'zustand';
import { createNotificationStream } from '../notification/stream';
import * as NotifAPI from './api';

export const useNotificationStore = create((set, get) => ({
  notifications: [],
  unreadCount: 0,

  stopFn: null,
  isStreaming: false,

  // =========================
  // üìå –ó–∞–≥—Ä—É–∑–∫–∞ –∏—Å—Ç–æ—Ä–∏–∏
  // =========================
  loadNotifications: async () => {
    try {
      const list = await NotifAPI.listNotifications();

      const normalized = list.map(n => ({
        id: n.id,
        userId: n.userId,
        type: n.type,
        referenceId: n.referenceId || null,
        content: n.content,
        read: n.read === true,
        createdAt: n.createdAt
      }));

      set({
        notifications: normalized,
        unreadCount: normalized.filter(n => !n.read).length
      });
    } catch (err) {
      console.error('–û—à–∏–±–∫–∞ –∑–∞–≥—Ä—É–∑–∫–∏ —É–≤–µ–¥–æ–º–ª–µ–Ω–∏–π:', err);
    }
  },

  // =========================
  // üîî –ó–∞–ø—É—Å–∫ gRPC —Å—Ç—Ä–∏–º–∞
  // =========================
  startStream: () => {
    if (get().isStreaming) return;

    console.log('üîî Starting notification stream...');

    const stopFn = createNotificationStream({
      onMessage: notif => {
        console.log('üîî STREAM MESSAGE:', notif);

        set(state => {
          // –∏–∑–±–µ–≥–∞–µ–º –¥—É–±–ª–∏–∫–∞—Ç–æ–≤
          if (state.notifications.some(n => n.id === notif.id)) {
            return state;
          }

          return {
            notifications: [notif, ...state.notifications],
            unreadCount: state.unreadCount + (notif.read ? 0 : 1)
          };
        });
      },

      onError: () => {
        console.warn('‚ùå Stream error ‚Üí reconnecting...');
        set({ isStreaming: false, stopFn: null });
        setTimeout(() => get().startStream(), 3000);
      }
    });

    set({ stopFn, isStreaming: true });
  },

  // =========================
  // ‚õî –û—Å—Ç–∞–Ω–æ–≤–∫–∞ —Å—Ç—Ä–∏–º–∞
  // =========================
  stopStream: () => {
    const stop = get().stopFn;
    if (stop) stop();

    set({ stopFn: null, isStreaming: false });
  },

  // =========================
  // ‚òëÔ∏è –û—Ç–º–µ—Ç–∏—Ç—å –∫–∞–∫ –ø—Ä–æ—á–∏—Ç–∞–Ω–Ω–æ–µ
  // =========================
  markAsRead: async id => {
    try {
      await NotifAPI.markAsRead(id);

      set(state => {
        const updated = state.notifications.map(n =>
          n.id === id ? { ...n, read: true } : n
        );

        return {
          notifications: updated,
          unreadCount: updated.filter(n => !n.read).length
        };
      });
    } catch (err) {
      console.error('–û—à–∏–±–∫–∞ markAsRead:', err);
    }
  },

  // =========================
  // üóë –£–¥–∞–ª–∏—Ç—å —É–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ
  // =========================
  deleteNotification: async id => {
    try {
      await NotifAPI.deleteNotification(id);

      set(state => {
        const updated = state.notifications.filter(n => n.id !== id);

        return {
          notifications: updated,
          unreadCount: updated.filter(n => !n.read).length
        };
      });
    } catch (err) {
      console.error('–û—à–∏–±–∫–∞ deleteNotification:', err);
    }
  },

  // =========================
  // üßπ –û—á–∏—Å—Ç–∏—Ç—å –≤—Å–µ
  // =========================
  clearAll: async () => {
    try {
      await NotifAPI.clearAll();
      set({ notifications: [], unreadCount: 0 });
    } catch (err) {
      console.error('–û—à–∏–±–∫–∞ clearAll:', err);
    }
  }
}));

// –î–ª—è –¥–µ–±–∞–≥–∞ —á–µ—Ä–µ–∑ DevTools
if (typeof window !== 'undefined') {
  window.useNotificationStore = useNotificationStore;
}
